refactor(public): move to folder

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       /* Background */
-      background: url('background.jpg') center center / cover no-repeat;
+      background: url('/images/background.jpg') center center / cover no-repeat;
       height: 100vh;
       width: 100%;
       font-family: Times;
