--- a/public/about/author.html
+++ b/public/about/author.html
@@ -6,7 +6,7 @@
   <style>
     body {
       /* Background */
-      background: url('background.jpg') center center / cover no-repeat;
+      background: url('/images/background.jpg') center center / cover no-repeat;
       height: 100vh;
       width: 100%;
       font-family: Times;
@@ -37,7 +37,7 @@
 <body>
   <div class="container">
     <div class="container__media">
-      <img style='height: 100%; width: 100%; object-fit: contain' src="/copybara.jpeg" alt="copybara">
+      <img style='height: 100%; width: 100%; object-fit: contain' src="/images/copybara.jpeg" alt="copybara">
     </div>
 
     <div class="container__content">
