feat: add opening in a new tab to link

--- a/public/about/author.html
+++ b/public/about/author.html
@@ -47,7 +47,7 @@
         Студент онлайн-школы Thinknetika.<br>
         Начала с работы с человеческим мозгом, а продолжила с вебом.
     </p>
-    <a style="font-size: 17px" href="https://github.com/ekateriniy">GitHub</a>
+    <a style="font-size: 17px" href="https://github.com/ekateriniy" target="_blank" rel="nofollow noopener">GitHub</a>
     </div>
 </div> 
 </body>
