--- a/public/about/index.html
+++ b/public/about/index.html
@@ -31,7 +31,7 @@
   </div>
   <div style="position: absolute; bottom: 0; width:98%; text-align: left">
     <p>Разработанно ​онлайн-школой Thinknetica<br>
-    <a href="https://thinknetica.com">thinknetica.com</a></p>
+    <a href="https://thinknetica.com" target="_blank" rel="nofollow noopener">thinknetica.com</a></p>
     <p>Реализовано Юниной Екатериной</p>
   </div>  
 </body>
